unpackaged/main/default/objects/Account/fields/Product_s__c.field-meta.xml
<CustomField>
    <fullName>Product_s__c</fullName>
    <label>Product(s) (old)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products</valueSetName>
    </valueSet>
</CustomField>