unpackaged/main/default/objects/Account/fields/projected_overages__c.field-meta.xml
<CustomField>
    <fullName>projected_overages__c</fullName>
    <description>The Google Cloud overage amount projected for this month.</description>
    <inlineHelpText>The Google Cloud overage amount projected for this month.</inlineHelpText>
    <label>Projected Overages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>