unpackaged/main/default/objects/Account/fields/Related_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunities__c</fullName>
    <label>Related Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>