unpackaged/main/default/objects/Account/fields/Renewal_Date2__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date2__c</fullName>
    <formula>Most_Recent_New_Renewal_Opp__c + 365</formula>
    <label>Renewal Date2</label>
    <type>Date</type>
</CustomField>