unpackaged/main/default/objects/Account/fields/SalesforceIQ_Id__c.field-meta.xml
<CustomField>
    <fullName>SalesforceIQ_Id__c</fullName>
    <label>SalesforceIQ Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>