unpackaged/main/default/objects/Account/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <description>This Date field is populated via the "Account_Service_End_Date" DLRS function, and captures the Service End Date for the Won Opportunity with the furthest out End Date.</description>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>