unpackaged/main/default/objects/Account/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <description>This Date field is populated via the "Account_Service_Start_Date" DLRS function, and captures the Service Start Date for the Won Opportunity with the furthest out Start Date.</description>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>