unpackaged/main/default/objects/Account/fields/Success_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Success_Plan_URL__c</fullName>
    <description>This is the success plan that the CSM creates</description>
    <inlineHelpText>This is the success plan that the CSM creates</inlineHelpText>
    <label>Success Plan URL</label>
    <type>Url</type>
</CustomField>