unpackaged/main/default/objects/Account/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <description>Campaign value rollup field</description>
    <label>Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prometheus</fullName>
            </value>
            <value>
                <fullName>Graphite</fullName>
            </value>
            <value>
                <fullName>Metrictank</fullName>
            </value>
            <value>
                <fullName>Cortex</fullName>
            </value>
            <value>
                <fullName>Grafana</fullName>
            </value>
            <value>
                <fullName>Loki</fullName>
            </value>
            <value>
                <fullName>Tanka</fullName>
            </value>
            <value>
                <fullName>worldPing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>