unpackaged/main/default/objects/Account/fields/Technology_Detail__c.field-meta.xml
<CustomField>
    <fullName>Technology_Detail__c</fullName>
    <label>Technology Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>