unpackaged/main/default/objects/Account/fields/Total_Score_w_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Total_Score_w_Behavior__c</fullName>
    <label>Total Score w/ Multiplier</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>