unpackaged/main/default/objects/Account/fields/Tracing__c.field-meta.xml
<CustomField>
    <fullName>Tracing__c</fullName>
    <description>Count of 'raised hands' for Tracing. This is populated by a scheduled Account Flow.</description>
    <inlineHelpText>Count of 'raised hands' for Tracing.</inlineHelpText>
    <label># Tracing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>