unpackaged/main/default/objects/Account/fields/UltimateParent__c.field-meta.xml
<CustomField>
    <fullName>UltimateParent__c</fullName>
    <formula>IF( LEN(Parent.Name)&lt;1 ,HYPERLINK("/"&amp;Id, Name,"_parent"),

IF( LEN( Parent.Parent.Name )&lt;1 ,HYPERLINK("/"&amp;Parent.Id,Parent.Name,"_parent"),

IF( LEN( Parent.Parent.Parent.Name )&lt;1 ,HYPERLINK("/"&amp;Parent.Parent.Id,Parent.Parent.Name,"_parent"),

IF( LEN( Parent.Parent.Parent.Parent.Name )&lt;1 ,HYPERLINK("/"&amp;Parent.Parent.Parent.Id,Parent.Parent.Parent.Name,"_parent"),

IF( LEN( Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,HYPERLINK("/"&amp;Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Name,"_parent"),

IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,HYPERLINK("/"&amp;Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Name,"_parent"),

IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,HYPERLINK("/"&amp;Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Name,"_parent"),

IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,HYPERLINK("/"&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,"_parent"),

IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,HYPERLINK("/"&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,"_parent"),

IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,HYPERLINK("/"&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,"_parent"), "Ultimate Parent Beyond 10 Levels"))))))))))</formula>
    <inlineHelpText>This is the parent at the very top of the hierarchy</inlineHelpText>
    <label>Ultimate Parent</label>
    <type>Text</type>
</CustomField>