unpackaged/main/default/objects/Account/fields/Update_Territory_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Update_Territory_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to force the update on the territory assignment field</description>
    <inlineHelpText>Check this box to force the update on the territory assignment field</inlineHelpText>
    <label>Update Territory Assignment</label>
    <type>Checkbox</type>
</CustomField>