unpackaged/main/default/objects/Account/fields/Web_Monthly_views_CB__c.field-meta.xml
<CustomField>
    <fullName>Web_Monthly_views_CB__c</fullName>
    <label>Web Monthly Views (CB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>