unpackaged/main/default/objects/Account/fields/Web_Visit_Score__c.field-meta.xml
<CustomField>
    <fullName>Web_Visit_Score__c</fullName>
    <description>This field scores the # of Web Visits on the account
&gt; 60=60, 11-60=45, 1-10=30, 0=15</description>
    <formula>IF(Web_Visits_Sessions_Last_60_days__c &gt;= 61, 60,
IF(Web_Visits_Sessions_Last_60_days__c &gt;= 11, 45,
IF(Web_Visits_Sessions_Last_60_days__c &gt;= 1, 30,
IF(Web_Visits_Sessions_Last_60_days__c = 0, 15,
IF(ISBLANK(Web_Visits_Sessions_Last_60_days__c), 0, 15)))))</formula>
    <label>Web Visit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>