unpackaged/main/default/objects/Account/fields/Web_Visits_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Web_Visits_Date_Range__c</fullName>
    <description>This field is manually updated with the date range of the Google Analytics data related to the web activity fields on the account</description>
    <label>Web Visits: Date Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>