unpackaged/main/default/objects/Account/fields/Web_Visits_Sessions_Last_60_days__c.field-meta.xml
<CustomField>
    <fullName>Web_Visits_Sessions_Last_60_days__c</fullName>
    <description>This field is manually updated with Google Analytics data to track the number of sessions on grafana.com in the last 60 days</description>
    <label>Web Visits: Sessions Last 60 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>