unpackaged/main/default/objects/Account/fields/Web_Weekly_Views_CB__c.field-meta.xml
<CustomField>
    <fullName>Web_Weekly_Views_CB__c</fullName>
    <label>Web Weekly Views (CB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>