unpackaged/main/default/objects/Account/fields/Won_Deals__c.field-meta.xml
<CustomField>
    <fullName>Won_Deals__c</fullName>
    <description>This is a roll up summary formula that counts the number of won deals on the opportunity. This is used to assist in locking down the billing and shipping address from edits unless you're in finance.</description>
    <inlineHelpText>This is a roll up summary formula that counts the number of won deals on the opportunity. This is used to assist in locking down the billing and shipping address from edits unless you're in finance.</inlineHelpText>
    <label>Won Deals?</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Deal Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>