unpackaged/main/default/objects/Account/validationRules/Acct_Owner_Unable_to_be_Changed_by_Rep.validationRule-meta.xml
<ValidationRule>
    <fullName>Acct_Owner_Unable_to_be_Changed_by_Rep</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId),
$Profile.Name = "Grafana Sales" || $Profile.Name = "Grafana Sales Leadership"
)</errorConditionFormula>
    <errorMessage>You are unable to change the account owner. Please reach out to Alexis Hensel.</errorMessage>
</ValidationRule>