unpackaged/main/default/objects/Account/listViews/Accounts_w_Committed_ARR.listView-meta.xml
<ListView>
    <fullName>Accounts_w_Committed_ARR</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Committed_ARR__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Committed_ARR__c</field>
        <operation>notEqual</operation>
        <value>,0</value>
    </filters>
    <label>Accounts w/ Committed ARR</label>
</ListView>