unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ID_18_digit__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>admin_panel_link__c</columns>
    <columns>Customer_Success_Manager__c</columns>
    <columns>gcom_org_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Count_of_Won_Opps__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Accounts</label>
</ListView>