unpackaged/main/default/objects/Account/listViews/Eric_s_Accounts1.listView-meta.xml
<ListView>
    <fullName>Eric_s_Accounts1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Matched_Lead_Opt_Ins__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Owner_Name__c</field>
        <operation>equals</operation>
        <value>Eric Eymann</value>
    </filters>
    <label>Eric's Accounts</label>
</ListView>