unpackaged/main/default/objects/Account/listViews/Heine_Heat_Map.listView-meta.xml
<ListView>
    <fullName>Heine_Heat_Map</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Matched_Lead_Opt_Ins__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Owner_Name__c</field>
        <operation>contains</operation>
        <value>Kristoffer</value>
    </filters>
    <label>Heine Heat Map</label>
</ListView>