unpackaged/main/default/objects/Account/listViews/Ian_s_Accounts.listView-meta.xml
<ListView>
    <fullName>Ian_s_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Matched_Lead_Opt_Ins__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Owner_Name__c</field>
        <operation>equals</operation>
        <value>ian osborn</value>
    </filters>
    <label>Ian's Accounts</label>
</ListView>