unpackaged/main/default/objects/Account/listViews/Konrad_Heat_Map.listView-meta.xml
<ListView>
    <fullName>Konrad_Heat_Map</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Matched_Lead_Opt_Ins__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Owner_Name__c</field>
        <operation>equals</operation>
        <value>Konrad Pacula</value>
    </filters>
    <label>Konrad Heat Map</label>
</ListView>